--- a/package.json
+++ b/package.json
@@ -1,23 +1,28 @@
 {
-  "name": "mylang",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "firstlang",
+  "version": "0.0.1",
+  "description": "Free Interactive Robot Scripting Tutorial",
+  "main": "bundle.js",
   "scripts": {
-    "start": "npx & node dist/app.js",
+    "start": "npx tsc & node ts-out/app.js",
     "lint": "eslint . --ext .ts",
     "test": "jest --coverage",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "rollup": "npx tsc && rollup -c rollup.config.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@open-wc/building-rollup": "^2.0.1",
     "@types/jest": "^28.1.1",
     "@typescript-eslint/eslint-plugin": "^5.28.0",
     "@typescript-eslint/parser": "^5.28.0",
+    "deepmerge": "^4.2.2",
     "eslint": "^8.17.0",
     "jest": "^28.1.1",
+    "rimraf": "^3.0.2",
+    "rollup": "^2.75.6",
     "ts-jest": "^28.0.5",
     "typescript": "^4.7.3"
   },
