--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,15 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
-    "esModuleInterop": true,
-    "target": "es6",
-    "moduleResolution": "node",
-    "sourceMap": true,
-    "outDir": "dist"
-  },
-  "lib": ["es2015"]
+    "target": "es2019",                          
+    "module": "esnext",
+    "moduleResolution": "node",                     
+    "noEmitOnError": true,
+    "lib": ["es2019"],                            
+    "strict": true,  
+    "esModuleInterop": false,                 
+    "outDir": "out-tsc",
+    "rootDir": "./"
+  }
+  ,
+  "include": ["./src/**/*.ts"]
 }
-
