--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.0.1",
   "description": "Free Interactive Robot Scripting Tutorial",
   "main": "bundle.js",
+  "types": "bundle.d.ts",
   "scripts": {
     "start": "npx tsc & node ts-out/app.js",
     "lint": "eslint . --ext .ts",
-    "test": "jest --coverage",
+    "test": "jest --coverage ./tests",
     "test:watch": "jest --watch",
     "rollup": "npx tsc && rollup -c rollup.config.js"
   },
@@ -14,7 +15,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/preset-typescript": "^7.17.12",
     "@open-wc/building-rollup": "^2.0.1",
+    "@rollup/plugin-typescript": "^8.3.3",
     "@types/jest": "^28.1.1",
     "@typescript-eslint/eslint-plugin": "^5.28.0",
     "@typescript-eslint/parser": "^5.28.0",
@@ -23,6 +26,7 @@
     "jest": "^28.1.1",
     "rimraf": "^3.0.2",
     "rollup": "^2.75.6",
+    "rollup-plugin-dts": "^4.2.2",
     "ts-jest": "^28.0.5",
     "typescript": "^4.7.3"
   },
