--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,5 +12,5 @@
     "rootDir": "./"
   }
   ,
-  "include": ["./src/**/*.ts", "./src/**/*.d.ts", "./tests/**/*.ts"]
+  "include": ["./src/**/*.ts", "./src/**/*.d.ts"]
 }
